--- a/HTML_CSS_JS/HTML/jquery的使用.html
+++ b/HTML_CSS_JS/HTML/jquery的使用.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../JS/jquery-3.5.1.js"></script>
+	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 </head>
 <body>
  <!--div#page>div.logo+ul#myul>li*2>a    >>tab-->
@@ -21,21 +21,34 @@
 		<li><a href="">5</a></li>
 		<li><a href="">6</a></li>
 	</ul>
-	<ul id="myul4">
-		<li><a href="">7</a></li>
-		<li><a href="">8</a></li>
+	<ul id="myul4" class="muul44">
+		<li>7</li>
+		<li>8</li>
 	</ul>
 		<ul id="myul5">
 		<li><a href="">9</a></li>
 		<li><a href="">10</a></li>
 	</ul>
 	<input id="page" type="button" value="点我弹窗" />
+	<input type="button" onclick="content()" value="点我获取文本">
 </div>
 <script>
 	
 	$("#page").click(function event () {
 		alert("ok");
 	})
+
+	function content(){
+		var	obj = document.getElementById('123');
+		console.log(obj);
+		console.log(obj.textContent);
+		 }
+	function fun1(){$("ul.muul44 li").each(function () {
+		var obj = $(this);
+		console.log(obj)
+		var content = obj.html();
+		console.log(content);
+	})}
 </script>
 
 <!--jquery选择器
@@ -43,6 +56,8 @@
 	2.	$("ul li:eq(3)")  ul下的第4个li标签
 	$("ul#myul5 li:eq(1)")  id为myul5的ulul下的第2个li标签
 -->
+
+
 
 </body>
 
