robot项目的基础使用

--- a/框架/Python+robootframe/report.html
+++ b/框架/Python+robootframe/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,139],[],[[4,0,0,[],[1,54,34],[]],[5,0,0,[],[1,105,16],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,81],[],[[4,0,0,[],[1,67,10],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*判断的使用","*D:\\Python_area\\rf-project\\判断的使用.robot","*%E5%88%A4%E6%96%AD%E7%9A%84%E4%BD%BF%E7%94%A8.robot","*判断字符是否存在","*Run Keyword If后执行多个关键字"]);
+window.output["strings"] = window.output["strings"].concat(["*","*R2","*D:\\_git\\python_utils\\框架\\Python+robootframe\\r2.robot","*r2.robot","*run keyword if的使用"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"判断的使用","name":"判断的使用","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"R2","name":"R2","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1620438909927;
+window.output["baseMillis"] = 1625623585549;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 186;
+window.output["generated"] = 92;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
