--- a/框架/Python+robootframe/log.html
+++ b/框架/Python+robootframe/log.html
@@ -1795,25 +1795,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,139],[],[[4,0,0,[],[1,54,34],[[0,5,6,0,7,8,0,0,[1,66,3],[[0,9,6,0,10,11,0,0,[1,68,1],[[8,69,2,11]]]]],[0,9,6,0,10,12,0,0,[1,70,3],[[8,72,2,13]]],[0,5,6,0,7,14,0,0,[1,80,7],[]]]],[15,0,0,[],[1,105,16],[[0,5,6,0,7,16,0,0,[1,111,8],[[0,17,6,0,18,19,0,0,[1,112,7],[[0,9,6,0,10,11,0,0,[1,113,1],[[8,114,2,11]]],[0,9,6,0,10,20,0,0,[1,115,0],[[8,115,2,20]]],[0,9,6,0,10,21,0,0,[1,116,3],[[8,119,2,21]]]]]]]]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,81],[],[[4,0,0,[],[1,67,10],[[0,5,6,0,7,8,0,0,[1,70,3],[[0,9,6,0,10,11,0,0,[1,71,2],[[8,73,2,11]]]]],[0,5,6,0,7,12,13,0,[1,73,3],[[0,14,6,0,15,13,0,0,[1,74,0],[]],[8,76,2,16]]],[0,9,6,0,10,13,0,0,[1,76,1],[[8,77,2,17]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*判断的使用","*D:\\Python_area\\rf-project\\判断的使用.robot","*%E5%88%A4%E6%96%AD%E7%9A%84%E4%BD%BF%E7%94%A8.robot","*判断字符是否存在","*Run Keyword If","*BuiltIn","*<p>Runs the given keyword with the given arguments, if <code>condition\x3c/code> is true.\x3c/p>","*'VPN' in '${var}', log, nice","*Log","*<p>Logs the given message with the given level.\x3c/p>","*nice","*${var_list}","*['VP', '连接管理', '总部']","*'VPN' in '${var_list[0]}', log, nice","*Run Keyword If后执行多个关键字","*'VPN' in '${var}', Run Keywords, log, nice, AND, log, nice2, AND, log, nice3","*Run Keywords","*<p>Executes all the given keywords in a sequence.\x3c/p>","*log, nice, AND, log, nice2, AND, log, nice3","*nice2","*nice3"]);
+window.output["strings"] = window.output["strings"].concat(["*","*R2","*D:\\_git\\python_utils\\框架\\Python+robootframe\\r2.robot","*r2.robot","*run keyword if的使用","*Run Keyword If","*BuiltIn","*<p>Runs the given keyword with the given arguments, if <code>condition\x3c/code> is true.\x3c/p>","*${msg} &gt; 1, log, 'nice'","*Log","*<p>Logs the given message with the given level.\x3c/p>","*'nice'","*${msg} &gt; 1000, set variable, 失败, ELSE, set variable, ${msg}","*${msg}","*Set Variable","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*${msg} = 200","*200"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"判断的使用","name":"判断的使用","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"R2","name":"R2","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1620438909927;
+window.output["baseMillis"] = 1625623585549;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 186;
+window.output["generated"] = 92;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
